--- a/index.html
+++ b/index.html
@@ -55,15 +55,27 @@
                 <input type="email" id="email" name="email" placeholder="Email">
 
                 <!-- Required. -->
+                <label for="sex">Sex</label>
+                <input type="radio" id="male" name="male" value="Male">
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="female" value="Female">
+                <label for="female">Female</label><br>
 
                 <!-- Required. -->
+                <label for="language">Language</label>
+                <input type="checkbox" id="english" name="english" value="English">
+                <label for="english">English</label>
+                <input type="checkbox" id="non-english" name="non-english" value="Non English">
+                <label for="non-english">Non English</label><br>
 
                 <!-- Optional. -->
+                <label for="About">About</label><br>
+                <textarea name="about" id="about" cols="30" rows="10"></textarea>
 
                 <input type="submit" value="Submit">
             </form>
-        </divv>
-        <script src="index.js"></script>
+            </divv>
+            <script src="index.js"></script>
     </body>
 
 </html>
