--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
             <h5>Rahul Dutta</h5>
         </div>
         <div id="form">
-            <form action="#">
+            <form name="myForm" action="#" onsubmit="return validateForm()">
                 <!-- Required and must be of length 5 to 12. -->
                 <label for="user-id">User ID</label>
-                <input type="text" id="user-id" name="User ID" placeholder="User ID.">
+                <span id="user-id-alert"></span>
+                <input type="text" id="user-id" name="user-id" placeholder="User ID.">
 
                 <!-- Required and must be of length 7 to 12. -->
                 <label for="password">Password</label>
-                <input type="text" id="password" name="Password" placeholder="Password">
+                <span id="password-alert"></span>
+                <input type="text" id="password" name="password" placeholder="Password">
 
                 <!-- Required and alphabates only. -->
                 <label for="name">Name</label>
