--- a/index.html
+++ b/index.html
@@ -18,60 +18,75 @@
             <h5>Rahul Dutta</h5>
         </div>
         <div id="form">
-            <form name="myForm" action="#" onsubmit="return validateForm()">
+            <form name="myForm" onsubmit="return validateForm()">
                 <!-- Required and must be of length 5 to 12. -->
                 <label for="user-id">User ID</label>
+                <span class="req">*</span>
                 <span id="user-id-alert"></span>
                 <input type="text" id="user-id" name="user-id" placeholder="User ID.">
 
                 <!-- Required and must be of length 7 to 12. -->
                 <label for="password">Password</label>
+                <span class="req">*</span>
                 <span id="password-alert"></span>
                 <input type="text" id="password" name="password" placeholder="Password">
 
                 <!-- Required and alphabates only. -->
                 <label for="name">Name</label>
+                <span class="req">*</span>
+                <span id="name-alert"></span>
                 <input type="text" id="name" name="name" placeholder="Name">
 
                 <!-- Optional  -->
                 <label for="address">Address</label>
+                <span class="optional">(Optional)</span>
                 <input type="text" id="address" name="address" placeholder="Address">
 
                 <!-- Required. Must select a country. -->
                 <label for="country">Country</label>
+                <span class="req">*</span>
+                <span id="country-alert"></span>
                 <select id="country" name="country">
-                    <option value="australia">Please Select a Country</option>
+                    <option value="Select">Please Select a Country</option>
                     <option value="canada">Canada</option>
                     <option value="usa">USA</option>
                     <option value="australia">Australia</option>
-                    <option value="canada">India</option>
-                    <option value="usa">UK</option>
+                    <option value="India">India</option>
+                    <option value="UK">UK</option>
                 </select>
 
-                <!-- equired. Must be numeric only. -->
-                <label for="zip-code">ZIP Code:</label>
+                <!-- Required. Must be numeric only. -->
+                <label for="zip-code">ZIP Code</label>
+                <span class="req">*</span>
+                <span id="zip-alert"></span>
                 <input type="text" id="zip-code" name="zip-code" placeholder="Zip Code">
 
                 <!-- Required. Must be a valid email. -->
                 <label for="email">Email</label>
+                <span class="req">*</span>
+                <span id="email-alert"></span>
                 <input type="email" id="email" name="email" placeholder="Email">
 
                 <!-- Required. -->
                 <label for="sex">Sex</label>
+                <span class="req">*</span>
                 <input type="radio" id="male" name="male" value="Male">
                 <label for="male">Male</label>
                 <input type="radio" id="female" name="female" value="Female">
-                <label for="female">Female</label><br>
+                <label for="female">Female </label>
+                <span id="sex-alert"></span><br><br>
 
                 <!-- Required. -->
                 <label for="language">Language</label>
+                <span class="req">*</span>
                 <input type="checkbox" id="english" name="english" value="English">
                 <label for="english">English</label>
                 <input type="checkbox" id="non-english" name="non-english" value="Non English">
-                <label for="non-english">Non English</label><br>
+                <label for="non-english">Non English </label><span id="language-alert"></span><br><br>
 
                 <!-- Optional. -->
-                <label for="About">About</label><br>
+                <label for="About">About</label>
+                <span class="optional">(Optional)</span><br>
                 <textarea name="about" id="about" cols="30" rows="10"></textarea>
 
                 <input type="submit" value="Submit">
